WEB - Dark Mode/Theme and fixed styling for Edit Pages

--- a/AirportAutomation/AirportAutomationWeb/wwwroot/css/style.css
+++ b/AirportAutomation/AirportAutomationWeb/wwwroot/css/style.css
@@ -17,7 +17,6 @@ tr {
 .pagination-container-absolute {
     position: absolute;
     bottom: 60px;
-    background-color: #ffffff;
     padding: 10px 0;
     z-index: 1000;
 }
